minor updates for ES