@@ -76,7 +76,7 @@ __start() {
 
     echo -n "Starting elasticsearch ... "
 
-    ES_JAVA_OPTS="-Xms4g -Xmx4g -XX:-UseConcMarkSweepGC -XX:-UseCMSInitiatingOccupancyOnly -XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=75" \
+    ES_JAVA_OPTS="-Xms4g -Xmx4g -XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=75" \
         ES_PATH_CONF=$PWD/conf/elasticsearch \
 	    $PWD/deploy/elasticsearch/bin/elasticsearch \
         -d -p $PWD/deploy/es.pid \
